my changing habbit redy

--- a/index.html
+++ b/index.html
@@ -1,12 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>VERSATILE-UI</title>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body class="inter-font bg-color">
+    <header class="header-contant">
+      <nav class="nav-contant">
+        <div class="nav-fitness">
+          <span class="span-one">Fitness</span>
+        </div>
+        <div class="nav-li-contant">
+          <li><a href="">Home</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">About</a></li>
+        </div>
+      </nav>
+      <section class="banner-section">
+        <div class="banner-section-contain">
+          <p class="banner-section-contain-text">
+            Get body in <br />
+            <span class="span-font">shape</span> & stay <br />
+            healthy
+          </p>
+          <p class="banner-section-contain-text-formet">
+            A huge selection of health and fitness content, healthy recipes
+            <br />
+            and transformation stories to help you get fit and stay fit!
+          </p>
+          <div>
+            <button class="banner-button">Join Club Now</button>
+            <button class="banner-downlad">Download App</button>
+          </div>
+        </div>
+
+        <div class="banner-section-details">
+          <p class="secal"></p>
+          <p>350+</p>
+          <p>Video tutorial</p>
+        </div>
+
+        <div class="banner-section-pic">
+          <img src="./images/Images 2.png" alt="" />
+        </div>
+      </section>
+    </header>
+
+    <main>
+      <section>
+        <div class="change-habits">
+          <h2>Change Your Habits</h2>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or <br> access to a gym.
+          </p>
+        </div>
+        <div class="change-habits-picture">
+            <div>
+                <img src="images/image 3.png" alt="">
+                <h3>Movement</h3>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+            <div>
+                <img src="images/image 2.png" alt="">
+                <h3>Time</h3>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+            <div>
+                <img src="images/image 4.png" alt="">
+                <h3>Practice</h3>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+            <div>
+                <img src="images/image 5.png" alt="">
+                <h3>Weight Loss</h3>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+
+
+
+
+
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
