my changing extra habits redy

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </header>
 
     <main>
+        <!-- change your habbit section -->
       <section>
         <div class="change-habits">
           <h2>Change Your Habits</h2>
@@ -91,10 +92,27 @@
 
 
         </div>
+      </section>
+      <!-- Run and extra Section -->
+      <section>
+        <div class="run-extra-section">
+            <div class="run-extra-section-details">
+                <h2> Run an Extra <br> Mile Easily </h2>
+                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts</p>
+                <button class="extra-button">
+                    <h6>join now</h6>
+
+                </button>
 
 
+            </div>
+            <div>
+                <img src="images/run.jpg" alt="">
+
+            </div>
 
 
+        </div>
 
 
       </section>
