--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@
 
 
       </section>
+      <!-- chalanging section -->
+      <section>
+
+      </section>
+      <!-- meet out team section -->
+      <section>
+        <div class="meet-our-team">
+            <h2>Meet Our Team</h2>
+            <p> We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or <br> access to a gym.</p>
+        </div>
+        <div>
+
+
+
+          
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
