my main section trainig responsive complete

--- a/index.html
+++ b/index.html
@@ -127,12 +127,51 @@
             <p> We believe fitness should be accessible to everyone, everywhere,
                 regardless of income or <br> access to a gym.</p>
         </div>
-        <div>
-
-
-
+        <div class="meet-our-team-section">
           
-        </div>
+            <div class="trainer1-section">
+              <img class="trainer1" src="images/trainer1.png" alt="">
+              <div class="trainer1-text">
+                <h6>Jeromi Bell</h6>
+              <p>Trainer</p>
+              </div>
+            </div>
+            <div class="trainer1-section">
+              <img class="trainer2" src="images/trainer2.png" alt="">
+              <div class="trainer1-text">
+                <h6>Cemeron Wili</h6>
+              <p>Trainer</p>
+              </div>
+            </div>
+            <div class="trainer1-section">
+              <img class="trainer3" src="images/trainer3.png" alt="">
+              <div class="trainer1-text">
+                <h6>Derall</h6>
+              <p>Trainer</p>
+              </div>
+            </div>
+            <div class="trainer1-section">
+              <img class="trainer4" src="images/trainer4.png" alt="">
+              <div class="trainer1-text">
+                <h6>Md Sami</h6>
+                <p>Trainer</p></div>
+            </div>
+            <div class="trainer1-section">
+              <img class="trainer5" src="images/trainer5.png" alt="">
+              <div class="trainer1-text">
+                <h6>Shipos will</h6>
+              <p>Trainer</p>
+              </div>
+            </div>
+            <div class="trainer1-section">
+              <img class="trainer6" src="images/trainer6.png" alt="">
+              <div class="trainer1-text">
+                <h6>Cris Gail</h6>
+              <p>Trainer</p>
+              </div>
+            </div>
+          </div>
+        
       </section>
     </main>
     <footer></footer>
