--- a/index.html
+++ b/index.html
@@ -174,6 +174,27 @@
         
       </section>
     </main>
-    <footer></footer>
+    <!-- footer section -->
+    <footer>
+      <section class="footer-section">
+        <div class="footer-section-text">
+          <div>
+            <h2>Fitness</h2>
+            <p>We believe fitness should be accessible to everyone, 
+              <br> everywhere, regardless of income or access to a gym. With 
+              <br> hundreds of professional workouts.</p>
+          </div>
+          <div></div>
+          <div></div>
+
+
+
+
+
+
+
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
