my footer section almost ready

--- a/index.html
+++ b/index.html
@@ -178,14 +178,28 @@
     <footer>
       <section class="footer-section">
         <div class="footer-section-text">
-          <div>
+          <div class="footer-one">
             <h2>Fitness</h2>
             <p>We believe fitness should be accessible to everyone, 
               <br> everywhere, regardless of income or access to a gym. With 
               <br> hundreds of professional workouts.</p>
           </div>
-          <div></div>
-          <div></div>
+          <div class="footer-two">
+            <h4>Get Started</h4>
+            <li>Service</li>
+            <li>Contact Us</li>
+            <li>Afflliat Program</li>
+            <li>About Us</li>
+
+          </div>
+          
+          <div class="footer-three">
+            <h4>Get Started</h4>
+            <li>Fitness</li>
+            <li>Platform</li>
+            <li>Workout Library</li>
+            <li>App Design</li>
+          </div>
 
 
 
