my footer section ready

--- a/index.html
+++ b/index.html
@@ -200,14 +200,13 @@
             <li>Workout Library</li>
             <li>App Design</li>
           </div>
-
-
-
-
-
-
-
-        </div>
+ </div>
+ <div>
+  <hr>
+ </div>
+ <div class="footer-four">
+  <p>All right reserved @Fitness 2024</p>
+ </div>
       </section>
     </footer>
   </body>
