my assingment right now all ready

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="">Contact</a></li>
           <li><a href="">About</a></li>
         </div>
+        
       </nav>
 
       <section>
@@ -25,7 +26,7 @@
           <div class="banner-section-text">
             <h2>
               Get body in <br />
-              <span>shape</span> & stay <br />
+              <span class="shape-font">shape</span> & stay <br />
               healthy
             </h2>
             <p>
